testing/errors/opnotsupp2.a
	a = 3 != []	; -> "Operation not supported."
